# srpenergy-api-client-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CLA.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  debug_script.py  example.env  local.env.example  pyproject.toml  quickstart_test.py  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  test_types.py  tox.ini  travis.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: .dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
.github/workflows/matchers/: hadolint.json
docs/: api.rst  conf.py  develop.rst  index.rst  module.rst
script/: pre_commit_bandit.sh
srpenergy/: __init__.py  client.py
test/: common.py  test_client.py  test_time_of_use.py
tests/: __init__.py  bandit.yaml  common.py  test_client.py  test_rate.py  test_time_of_use.py
