[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "srpenergy"
version     = "1.3.6"
license     = {text = "MIT"}
description = "An unofficial Python module for interacting with Srp Energy data."
readme      = "README.rst"
authors     = [
    {name = "Lamoreaux Lab", email = "info@golamoreaux.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
requires-python = ">=3.6.0"
dependencies    = []

[project.urls]
"Homepage"    = "https://github.com/lamoreauxlab/srpenergy-api-client-python"
"Source Code" = "https://github.com/lamoreauxlab/srpenergy-api-client-python.git"
"Bug Reports" = "https://github.com/lamoreauxlab/srpenergy-api-client-python/issues"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["srpenergy*"]

[tool.codespell]
skip = './.*,./.pyc,./docs/_build/*,./htmlcov/*'
count = true
quiet-level = 2

[tool.isort]
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = "srpenergy,tests"
forced_separate = "tests"
combine_as_imports = true

# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude = [".venv/*.*"]
exclude_dirs = [".venv"]
tests = ["B108", "B306", "B307", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B325", "B602", "B604"]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

# Used with flake8
[tool.pydocstyle]
match-dir='[^node_module].*'

[tool.rstcheck]
# report = "WARNING"
report_level = "INFO"
ignore = "docs/module.rst"
ignore_directives = ["automodule"]

[tool.pylint.MAIN]
py-version = "3.10"
jobs = 2
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing"
]
persistent = false
fail-on = [
    "I",
]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"
